--- a/index.html
+++ b/index.html
@@ -461,8 +461,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <li><a href="#truedespliegue-de-una-instancia-2">4.4. Despliegue de una instancia</a></li>
 <li><a href="#truemodificar-el-despliegue-2">4.5. Modificar el despliegue</a></li>
 <li><a href="#trueejecutar-un-script-de-inicializaci-n-2">4.6. Ejecutar un script de inicialización</a></li>
-<li><a href="#truedespliegue-de-aplicaci-n-docker-compose">4.7. Despliegue de aplicación Docker Compose</a></li>
-<li><a href="#truerecursos-de-inter-s">4.8. Recursos de interés</a></li>
+<li><a href="#truerecursos-de-inter-s">4.7. Recursos de interés</a></li>
 </ul>
 </li>
 </ul>
@@ -1984,7 +1983,7 @@ resource "google_compute_attached_disk" "attached-tf-disk" {<i class="conum" dat
 <p>Una característica muy interesante en el despliegue de una instancia es la posibilidad de ejecutar un script de inicialización durante su creación. Esto permite la creación de instancias con paquetes instalados y configurados.</p>
 </div>
 <div class="paragraph">
-<p>Terraform permite esta operación en OpenStack pasando un script en el parámetro <code>metadata_startup_script</code> al crear la instancia.</p>
+<p>Terraform permite esta operación en GCP pasando un script en el parámetro <code>metadata_startup_script</code> al crear la instancia.</p>
 </div>
 <div class="admonitionblock note">
 <table>
@@ -2000,89 +1999,6 @@ resource "google_compute_attached_disk" "attached-tf-disk" {<i class="conum" dat
 </tr>
 </table>
 </div>
-<div class="paragraph">
-<p>A continuación se muestra un script <code>install_mysql.sh</code> que realiza varias operaciones:</p>
-</div>
-<div class="ulist">
-<ul>
-<li>
-<p>Actualizar el repositorio de paquetes.</p>
-</li>
-<li>
-<p>Instalar un servidor MySQL con el password <code>my_password</code>.</p>
-</li>
-<li>
-<p>Descargar un archivo con un script SQL para inicializar una base de datos de ejemplo.</p>
-</li>
-<li>
-<p>Ejecutar el archivo SQL para inicializar la base de datos.</p>
-</li>
-<li>
-<p>Modificar el archivo de configuración de MySQL (<code>mysqld.cnf</code>) para que admita conexiones desde cualquier lugar.</p>
-</li>
-</ul>
-</div>
-<div class="listingblock">
-<div class="title">El script install_mysql.sh</div>
-<div class="content">
-<pre class="highlightjs highlight"><code class="language-bash" data-lang="bash">#!/bin/bash
-
-sudo debconf-set-selections &lt;&lt;&lt; 'mysql-server mysql-server/root_password password my_password'
-sudo debconf-set-selections &lt;&lt;&lt; 'mysql-server mysql-server/root_password_again password my_password'
-sudo apt-get update
-sudo apt-get -y install mysql-server
-wget https://gist.githubusercontent.com/ualmtorres/55325478004104fbe828683ea5131e40/raw/0c8edc5750cac0a6a5796544860c8cd94d5c94ac/sginit.sql -O /home/ubuntu/sginit.sql
-mysql -h "localhost" -u "root" "-pmy_password" &lt; "/home/ubuntu/sginit.sql"
-
-sudo sed -i 's/127.0.0.1/0.0.0.0/g' /etc/mysql/mysql.conf.d/mysqld.cnf
-sudo service mysql restart</code></pre>
-</div>
-</div>
-<div class="paragraph">
-<p>Para crear la instancia con Terraform basta con crear el recurso pasando a la propiedad <code>metadata_startup_script</code> el nombre y la ruta del script de inicialización. En este caso, se supone que el script de inicialización está en el mismo directorio que el script Terraform.</p>
-</div>
-<div class="listingblock">
-<div class="content">
-<pre class="highlightjs highlight"><code class="language-bash" data-lang="bash">resource "google_compute_instance" "tf-vm" {
-  name         = "tf-vm"
-  zone         = "us-central1-a"
-  machine_type = "n1-standard-1"
-  boot_disk {
-    initialize_params {
-      image = "ubuntu-os-cloud/ubuntu-1804-lts"
-    }
-  }
-
-  # Add SSH access to the Compute Engine instance
-  metadata = {
-    ssh-keys = "${var.gcp-username}:${file("~/.ssh/id_rsa.pub")}" <i class="conum" data-value="1"></i><b>(1)</b>
-  }
-
-  tags = ["ssh", "http"]
-
-  # Startup script
-  metadata_startup_script = file("setup-docker.sh")
-
-  network_interface {
-    network    = "default"
-    subnetwork = "default"
-
-    access_config {}
-  }
-}</code></pre>
-</div>
-</div>
-<div class="colist arabic">
-<table>
-<tr>
-<td><i class="conum" data-value="1"></i><b>1</b></td>
-<td>Pasar el script de inicialización de la instancia</td>
-</tr>
-</table>
-</div>
-</div>
-<div class="sect2">
-<h3 id="truedespliegue-de-aplicaci-n-docker-compose"><a class="anchor" href="#truedespliegue-de-aplicaci-n-docker-compose"></a>4.7. Despliegue de aplicación Docker Compose</h3>
 <div class="paragraph">
 <p>En este apartado veremos cómo crear una instancia aprovisionada con Docker y Docker Compose. Además, la instancia se inicializará con un archivo <code>docker-compose.yml</code> que despliega dos contenedores: un contenedor MySQL con una base de datos inicializada y otro contenedor con una aplicación PHP que muestra un catálogo de productos almacenados en el contenedor MySQL.</p>
 </div>
@@ -2250,6 +2166,9 @@ exit 0</code></pre>
 </table>
 </div>
 <div class="paragraph">
+<p>Para crear la instancia con Terraform basta con crear el recurso pasando a la propiedad <code>metadata_startup_script</code> el nombre y la ruta del script de inicialización. En este caso, se supone que el script de inicialización está en el mismo directorio que el script Terraform.</p>
+</div>
+<div class="paragraph">
 <p>La figura siguiente ilustra el resultado tras unos minutos que se necesitan para la creación e inicialización de la instancia y despliegue de la base de datos y la aplicación de catálogo.</p>
 </div>
 <div class="imageblock">
@@ -2259,7 +2178,7 @@ exit 0</code></pre>
 </div>
 </div>
 <div class="sect2">
-<h3 id="truerecursos-de-inter-s"><a class="anchor" href="#truerecursos-de-inter-s"></a>4.8. Recursos de interés</h3>
+<h3 id="truerecursos-de-inter-s"><a class="anchor" href="#truerecursos-de-inter-s"></a>4.7. Recursos de interés</h3>
 <div class="paragraph">
 <p><a href="https://learn.hashicorp.com/collections/terraform/gcp-get-started">Tutorial Get Started - Google Cloud con Terraform</a></p>
 </div>
@@ -2286,7 +2205,7 @@ exit 0</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-11-22 20:17:41 CET
+Last updated 2020-11-23 17:13:05 CET
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/github.min.css">
