--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </td>
 <td class="content">
 <div class="paragraph">
-<p>Disponible el <a href="https://github.com/ualmtorres/terraform-examples.git">repositorio</a> usando en este tutorial.</p>
+<p>Disponible el <a href="https://github.com/ualmtorres/terraform-examples.git">repositorio</a> usado en este tutorial.</p>
 </div>
 </td>
 </tr>
@@ -539,7 +539,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 </ul>
 </div>
 <div class="paragraph">
-<p>Es una extensión natural de metodologías <a href="https://en.wikipedia.org/wiki/Agile_software_development">Agile</a> y es habitual el uso de los <a href="https://www.google.com/url?sa=t&amp;rct=j&amp;q=&amp;esrc=s&amp;source=web&amp;cd=&amp;cad=rja&amp;uact=8&amp;ved=2ahUKEwiWlu-kgpPtAhUGnxQKHUvSCVwQFjABegQIBxAC&amp;url=https%3A%2F%2Fmedium.com%2F%40seanguthrie%2Fdevops-principles-the-cams-model-9687591ca37a&amp;usg=AOvVaw2fae_uAOcup-ClZewoN3FG">principios CAMS</a>, cuyas siglas vienen de:</p>
+<p>Es una extensión natural de metodologías <a href="https://en.wikipedia.org/wiki/Agile_software_development">Agile</a> y es habitual el uso de los <a href="https://medium.com/@seanguthrie/devops-principles-the-cams-model-9687591ca37a">principios CAMS</a>, cuyas siglas vienen de:</p>
 </div>
 <div class="ulist">
 <ul>
@@ -566,7 +566,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <p>Planificación ágil</p>
 </li>
 <li>
-<p>Despliegue continuo. La subida de cambios al repositorio de código desencadena la ejecución de pruebas automatizadas que finalmente realizan el despliegue de los cambios tras superarse las pruebas.</p>
+<p>Despliegue continuo (<em>CI/CD</em>). La subida de cambios al repositorio de código desencadena la ejecución de pruebas automatizadas que finalmente realizan el despliegue de los cambios tras superarse las pruebas.</p>
 </li>
 <li>
 <p>Infraestructura como código (<em>Infrastructure as Code</em>). Se trata del desarrollo de scripts para las tareas de despliegue y gestión de la infraestructura</p>
@@ -646,7 +646,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h2 id="trueterraform"><a class="anchor" href="#trueterraform"></a>2. Terraform</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p><a href="https://www.terraform.io/">Terraform</a> es una herramienta para construir, modificar y versionar infraestructura de forma segura y eficiente. Es un proyecto Open Source surgido en 2014. Genera un plan de ejecución (preview) indicando qué hará para conseguir el estado deseado. Si hay cambios en la configuración, Terraform detecta los cambios y crea un plan incremental para alcanzar el nuevo estado.</p>
+<p><a href="https://www.terraform.io/">Terraform</a> es una herramienta para construir, modificar y versionar infraestructura de forma segura y eficiente. Es un proyecto Open Source desarrollado por <a href="https://www.hashicorp.com/about">HashiCorp</a>, surgido en 2014. Genera un plan de ejecución (preview) indicando qué hará para conseguir el estado deseado. Si hay cambios en la configuración, Terraform detecta los cambios y crea un plan incremental para alcanzar el nuevo estado.</p>
 </div>
 <div class="sect2">
 <h3 id="trueinstalaci-n"><a class="anchor" href="#trueinstalaci-n"></a>2.1. Instalación</h3>
@@ -659,7 +659,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 
 The available commands for execution are listed below.
 The most common, useful commands are shown first, followed by
-less common or more advanced commands. If you're just getting
+less common or more advanced commands. If you are just getting
 started with Terraform, stick with the common commands. For the
 other commands, please read the help and docs before usage.
 
@@ -882,7 +882,7 @@ variable "security_groups" {
 </ul>
 </div>
 <div class="paragraph">
-<p>Una caracterísitica muy interesante de Terraform es la idempotencia, así como la facilidad para aplicar cambios. Si volvemos a ejecutar un despliegue con <code>terraform apply</code> y no ha habido cambios en los archivos de configuración tras el último despliegue (cuyo estado quedó almacenado en el archivo <code>.tfstate</code>), el despliegue quedará intacto. Es decir, no se volverá a crear infraestructura repetida ni se reemplazará la infraestructura creada por una nueva si no hay cambios en los archivos de configuración.</p>
+<p>Una característica muy interesante de Terraform es la idempotencia, así como la facilidad para aplicar cambios. Si volvemos a ejecutar un despliegue con <code>terraform apply</code> y no ha habido cambios en los archivos de configuración tras el último despliegue (cuyo estado quedó almacenado en el archivo <code>.tfstate</code>), el despliegue quedará intacto. Es decir, no se volverá a crear infraestructura repetida ni se reemplazará la infraestructura creada por una nueva si no hay cambios en los archivos de configuración.</p>
 </div>
 <div class="paragraph">
 <p>Sin embargo, si modificamos la configuración modificando los archivos Terraform estaremos indicando un nuevo estado al que queremos llegar. En este caso, al aplicar <code>terraform apply</code> sí se desplegarán los cambios realizados en la configuración. Sin embargo, sólo se desplegarán los cambios, manteniendo intacta la configuración no modificada.</p>
@@ -1082,7 +1082,7 @@ variable "openstack_keypair" {
 <p>Para evitar introducir datos sensibles en los archivos de configuración y evitar que queden expuestos en el sistema de control de versiones es buena práctica configurar valores sensibles en variables de entorno.</p>
 </div>
 <div class="paragraph">
-<p>El convenio de Terraform es que definamos en la shell las variables predecidas de <code>TF_VAR_</code>. Por ejemplo, definimos una variable de entorno <code>TF_VAR_PASSWORD</code> que será accedida por Terraform como <code>PASSWORD</code>.</p>
+<p>El convenio de Terraform es que definamos en la shell las variables precedidas de <code>TF_VAR_</code>. Por ejemplo, definimos una variable de entorno <code>TF_VAR_PASSWORD</code> que será accedida por Terraform como <code>PASSWORD</code>.</p>
 </div>
 <table class="tableblock frame-all grid-all spread">
 <caption class="title">Table 1. Nomemclatura de variables de entorno</caption>
@@ -1488,7 +1488,7 @@ resource "openstack_compute_instance_v2" "mysql" {
 <div class="sect2">
 <h3 id="truearchivos-de-plantilla"><a class="anchor" href="#truearchivos-de-plantilla"></a>3.6. Archivos de plantilla</h3>
 <div class="paragraph">
-<p>Una caracteística muy interesante de Terraform es la posibilidad de definir scripts con contenido dinámico. Se trata de arcchivos que interpolan el valor de variables generadas durante el proceso de despliegue.</p>
+<p>Una característica muy interesante de Terraform es la posibilidad de definir scripts con contenido dinámico. Se trata de archivos que interpolan el valor de variables generadas durante el proceso de despliegue.</p>
 </div>
 <div class="paragraph">
 <p>El procedimiento es el siguiente:</p>
@@ -1706,7 +1706,7 @@ MySQL_Floating_IP = 192.168.68.135</code></pre>
 <p>Seleccionar el proyecto Google Cloud.</p>
 </li>
 <li>
-<p>En el menú de navegación seleccionae <code>IAM y administración | Cuentas de servicio</code>.</p>
+<p>En el menú de navegación seleccionar <code>IAM y administración | Cuentas de servicio</code>.</p>
 </li>
 <li>
 <p>Seleccionar <code>Crear cuenta de servicio</code>.</p>
@@ -2205,7 +2205,7 @@ exit 0</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-11-23 17:13:05 CET
+Last updated 2020-11-24 09:37:12 CET
 </div>
 </div>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/github.min.css">
